<resources>
    <string name="app_name">TestTask</string>
    <string name="rating">Rating:</string>
    <string name="title">Title:</string>
    <string name="year">Year:</string>
    <string name="genre">Genre:</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_release_year">Release year</string>
    <string name="menu_title">More</string>
    <string name="movies_fragment_title">Movies</string>
    <string name="movie_detail_fragment_title">Movie</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
</resources>
